# translator

./: .env.example  .gitignore
apps/api/: Dockerfile  pyproject.toml
apps/api/ap-autoresearch/: evaluate.py  extract.py  program.md  results.tsv
apps/api/app/: auth.py  billing.py  config.py  dependencies.py  exceptions.py  free_tier.py  logging.py  main.py  markdown_ast.py  prompts.py  schemas.py  usage.py
apps/api/app/converters/: __init__.py  base.py  docx.py  docx_to_pdf.py  hwpx.py  pdf.py  text.py
apps/api/app/converters/hwpx_template/: version.xml
apps/api/app/converters/hwpx_template/Contents/: content.hpf  header.xml
apps/api/app/converters/hwpx_template/Scripts/: headerScripts  sourceScripts
apps/api/app/extractors/: __init__.py  base.py  docx.py  hwp.py  hwp5.py  image.py  pdf.py  text.py  voice.py
apps/api/app/invoice/: prompts.py  report.py  schemas.py  service.py
apps/api/app/providers/: __init__.py  base.py  fallback.py  gemini.py  openai.py
apps/api/app/routers/: billing.py  convert.py  formats.py  health.py  invoice.py  stats.py  subscribe.py  translate.py
apps/api/tests/: conftest.py  test_fallback_provider.py  test_markdown_ast.py  test_registries.py  test_translate_router.py
apps/web/: .gitignore  package-lock.json  package.json
apps/web/messages/: en.json  (+2 more)
docs/: ap-automation-strategy.md  ap-autoresearch-program.md  ap-invoice-datasets-research.md  bookmarklet-and-extension.md  document-parse-feature.md  greg-eisenberg-saas-framework.md  invoice-feature-roadmap.md  pricing-research.md  strategy-k-beauty-k-food-importers.md  strategy-k-content-fans.md  xenith-invoice-market-research.md  xenith-invoice-product-plan.md  xenith-invoice-tech-architecture.md
(+76 files in other folders)
